--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--<link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/my-offer.css">-->
+    <link rel="stylesheet" href="css/main.css">-->
+    <link rel="stylesheet" href="css/my-offer.css">
     <title>My Rewards</title>
   </head>
   <body>
