--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <div class="wrapper"> 
         <div id="root" class="main"> 
         </div>
+        <div class="scroll-top"></div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
     <script src="js/bootstrap.min.js"></script>
