--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,7 @@
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div class="wrapper">
-            <div id="root" class="main"></div>
-        </div>
+        <div id="root" class="wrapper"></div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     </body>
